[package]
name = "gramex-macro"
description = "gramex proc macro"
version = "0.1.0"
edition = "2024"
readme = "./readme.md"
license = "MIT"
repository = "https://github.com/aliibrahim123/structom"
documentation = "https://docs.rs/structom/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.115", features = ["full", "extra-traits"] }
